# ned2-motion-planning-benchmark

./: .gitignore  README.md
c_space_viz/: .gitignore  README.md  demo.ipynb  requirements.txt
c_space_viz/mylib/: CSpaceViz.py  MotionPlanner.py  Rectangle2D.py  SpecialEuclidean2D.py  graph2D.py  robotViz.py
motion_analysis/: .gitignore  README.md  generate_result.py  requirements.txt
motion_analysis/mylib/: analyzer.py
niryo_experiment/: .gitignore  Dockerfile  README.md  build_docker.sh  run_docker.sh
niryo_experiment/src/compare_alg/: CMakeLists.txt  package.xml
niryo_experiment/src/compare_alg/config/: compare_alg_config.yaml  config1.yaml  config2.yaml  config3.yaml  config4.yaml  config_base.yaml  config_ceiling.yaml  config_four_col.yaml  config_maze.yaml  config_short.yaml  config_walls.yaml
niryo_experiment/src/compare_alg/launch/: compare_alg.launch
niryo_experiment/src/compare_alg/src/: exec_motion_alg.cpp
niryo_experiment/src/niryo_rviz_launcher/: CMakeLists.txt  package.xml
niryo_experiment/src/niryo_rviz_launcher/config/: default_config.rviz
niryo_experiment/src/niryo_rviz_launcher/launch/: niryo_rviz.launch
niryo_experiment/src/record_experiment/: CMakeLists.txt  package.xml
niryo_experiment/src/record_experiment/src/: stopwatch.cpp  trajectory_logger.cpp
niryo_experiment/test_scenes/: base.scene  ceiling.scene  four_col.scene  maze.scene  short.scene  walls.scene
niryo_experiment/test_scenes/others/: test_4_obstacles.scene  test_complex_v1.scene  test_obstacles_simple.scene  two_planes.scene
